# rtree

./: .gitignore  CMakeLists.txt  a.out  find-iterator.py  findreadnlognplot.eps  findreadnsqplot.eps  findreadplot.eps  findtimeplot.eps  generate_random_rectangles.py  graf-find.m  graf.m  greeneSplit.cpp  greeneSplit.h  iterator.py  linearsplit.cpp  linearsplit.h  linersplit.cpp  m-iterator.py  main.cpp  mgraf.m  minigen.py  moptplot.eps  nlogn.eps  o.txt  osmparser.py  readlogplot.eps  readplot.eps  rectangle.cpp  rectangle.h  result-parser.py  rtree  rtree.cpp  rtree.h  rtreenode.cpp  rtreenode.h  run.py  simple-run.py  split.cpp  split.h  tests.cpp  (+6 more)
case1/: 1.rtree
case2/: 1.rtree  2.rtree  3.rtree
datasets/: 20148.txt  floats.txt  osm.csv  osm_real_finds.txt  otro.txt  parsed_osm.txt  parsed_osm_all.txt  parsed_osm_int.txt  parsed_osm_int_abs.txt  random5000.txt  santiago.txt  santiago_all.txt  wkt_2048.csv
find_queries/: find_osm.txt  find_osm_all.txt
resM/: 102_greene.txt  102_linear.txt  105_greene.txt  105_linear.txt  108_greene.txt  108_linear.txt  111_greene.txt  111_linear.txt  114_greene.txt  114_linear.txt  117_greene.txt  117_linear.txt  120_greene.txt  120_linear.txt  12_greene.txt  12_linear.txt  15_greene.txt  15_linear.txt  18_greene.txt  18_linear.txt  21_greene.txt  21_linear.txt  24_greene.txt  24_linear.txt  27_greene.txt  27_linear.txt  30_greene.txt  30_linear.txt  33_greene.txt  33_linear.txt  36_greene.txt  36_linear.txt  39_greene.txt  39_linear.txt  42_greene.txt  42_linear.txt  45_greene.txt  45_linear.txt  48_greene.txt  48_linear.txt  (+38 more)
(+55 files in other folders)
